# qt-obs-websocket

./: CMakeLists.txt  LICENSE  README.md
qt-obs-websocket-example/: CMakeLists.txt  main.cpp
qt-obs-websocket-lib/: CMakeLists.txt  obsresponse.h  qtobswebsocket.cpp  qtobswebsocket.h
